Lu decomposition with partial pivoting

--- a/Content/gauss-elim-pivoting.ipynb
+++ b/Content/gauss-elim-pivoting.ipynb
@@ -656,23 +656,21 @@
     "    N = y.size\n",
     "    assert A.shape[1] == N, 'A columns must be equal to y size'\n",
     "    C = np.vstack([A.T, y]).T\n",
-    "    D = np.identity(N)\n",
     "    \n",
-    "    for i = 1:N-1\n",
+    "    for k = 1:N-1\n",
     "        \n",
     "        # permutation step (computation of C tilde)\n",
-    "        p, C = permut(C, i)\n",
-    "        D = D[p]\n",
+    "        p, C = permut(C, k)\n",
     "        \n",
     "        # assert the pivot is nonzero\n",
-    "        assert C[i,i] != 0., 'null pivot!'\n",
+    "        assert C[k,k] != 0., 'null pivot!'\n",
     "        \n",
     "        # calculate the Gauss multipliers and store them \n",
     "        # in the lower part of C\n",
-    "        C[i+1:,i] = C[i+1:,i]/C[i,i]\n",
+    "        C[k+1:,k] = C[k+1:,k]/C[k,k]\n",
     "        \n",
     "        # zeroing of the elements in the ith column\n",
-    "        C[i+1:,i+1:] = C[i+1:,i+1:] - outer(C[i+1:,i], C[i,i+1:])\n",
+    "        C[k+1:,k+1:] = C[k+1:,k+1:] - outer(C[k+1:,k], C[k,k+1:])\n",
     "        \n",
     "    return C[:,:N], C[:,N]"
    ]
