--- a/Content/triangular_matrices_2.ipynb
+++ b/Content/triangular_matrices_2.ipynb
@@ -100,20 +100,20 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[ 70.113  74.017  20.457  56.895]\n",
-      " [ 48.189  48.958  73.841  47.424]\n",
-      " [  4.531  56.535  27.081  71.793]\n",
-      " [ 10.089  73.144  95.115  52.392]] \n",
+      "[[ 79.369  90.777  68.769  21.38 ]\n",
+      " [ 63.879  14.712  12.436   6.809]\n",
+      " [ 45.633  55.376  33.994  50.38 ]\n",
+      " [ 49.242  22.061  76.27   45.947]] \n",
       "\n",
-      "[[ 70.113  74.017  20.457  56.895]\n",
-      " [  0.     48.958  73.841  47.424]\n",
-      " [  0.      0.     27.081  71.793]\n",
-      " [  0.      0.      0.     52.392]] \n",
+      "[[ 79.369  90.777  68.769  21.38 ]\n",
+      " [  0.     14.712  12.436   6.809]\n",
+      " [  0.      0.     33.994  50.38 ]\n",
+      " [  0.      0.      0.     45.947]] \n",
       "\n",
-      "[[ 70.113   0.      0.      0.   ]\n",
-      " [ 48.189  48.958   0.      0.   ]\n",
-      " [  4.531  56.535  27.081   0.   ]\n",
-      " [ 10.089  73.144  95.115  52.392]]\n"
+      "[[ 79.369   0.      0.      0.   ]\n",
+      " [ 63.879  14.712   0.      0.   ]\n",
+      " [ 45.633  55.376  33.994   0.   ]\n",
+      " [ 49.242  22.061  76.27   45.947]]\n"
      ]
     }
    ],
@@ -192,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 18,
    "metadata": {
     "collapsed": true
    },
@@ -210,15 +210,15 @@
     "    j = j[p]\n",
     "    # create the vector uc\n",
     "    uc = U[i, j]\n",
+    "    print i\n",
+    "    print j\n",
     "    return uc"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 6,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "uc = U2uc(U)"
@@ -233,8 +233,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[ 70.113  74.017  48.958  20.457  73.841  27.081  56.895  47.424  71.793\n",
-      "  52.392]\n"
+      "[ 79.369  90.777  14.712  68.769  12.436  33.994  21.38    6.809  50.38\n",
+      "  45.947]\n"
      ]
     }
    ],
@@ -251,10 +251,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[ 70.113  74.017  20.457  56.895]\n",
-      " [  0.     48.958  73.841  47.424]\n",
-      " [  0.      0.     27.081  71.793]\n",
-      " [  0.      0.      0.     52.392]]\n"
+      "[[ 79.369  90.777  68.769  21.38 ]\n",
+      " [  0.     14.712  12.436   6.809]\n",
+      " [  0.      0.     33.994  50.38 ]\n",
+      " [  0.      0.      0.     45.947]]\n"
      ]
     }
    ],
@@ -324,7 +324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -361,7 +361,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {
     "collapsed": true
    },
@@ -380,7 +380,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -391,38 +391,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[ 70.113  74.017  20.457  56.895  48.958  73.841  47.424  27.081  71.793\n",
-      "  52.392]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print ur"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[ 70.113  74.017  20.457  56.895]\n",
-      " [  0.     48.958  73.841  47.424]\n",
-      " [  0.      0.     27.081  71.793]\n",
-      " [  0.      0.      0.     52.392]]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print U"
    ]
@@ -460,26 +440,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "ij = 11 | k = 0\n",
-      "ij = 21 | k = 1\n",
-      "ij = 31 | k = 2\n",
-      "ij = 41 | k = 3\n",
-      "ij = 22 | k = 4\n",
-      "ij = 32 | k = 5\n",
-      "ij = 42 | k = 6\n",
-      "ij = 33 | k = 7\n",
-      "ij = 43 | k = 8\n",
-      "ij = 44 | k = 9\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "for j in range(1,N+1):\n",
     "    for i in range(j,N+1):\n",
@@ -496,7 +459,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -519,7 +482,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -530,38 +493,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[ 70.113  48.189   4.531  10.089  48.958  56.535  73.144  27.081  95.115\n",
-      "  52.392]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print lc"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[ 70.113   0.      0.      0.   ]\n",
-      " [ 48.189  48.958   0.      0.   ]\n",
-      " [  4.531  56.535  27.081   0.   ]\n",
-      " [ 10.089  73.144  95.115  52.392]]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print L"
    ]
@@ -599,26 +542,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "ij = 11 | k = 0\n",
-      "ij = 21 | k = 1\n",
-      "ij = 22 | k = 2\n",
-      "ij = 31 | k = 3\n",
-      "ij = 32 | k = 4\n",
-      "ij = 33 | k = 5\n",
-      "ij = 41 | k = 6\n",
-      "ij = 42 | k = 7\n",
-      "ij = 43 | k = 8\n",
-      "ij = 44 | k = 9\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "for i in range(1,N+1):\n",
     "    for j in range(1,i+1):\n",
@@ -635,7 +561,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -654,7 +580,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -665,38 +591,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[ 70.113  48.189  48.958   4.531  56.535  27.081  10.089  73.144  95.115\n",
-      "  52.392]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print lr"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[ 70.113   0.      0.      0.   ]\n",
-      " [ 48.189  48.958   0.      0.   ]\n",
-      " [  4.531  56.535  27.081   0.   ]\n",
-      " [ 10.089  73.144  95.115  52.392]]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print L"
    ]
