rewrite the exercises of LU decomposition

--- a/Content/chol_decomp.ipynb
+++ b/Content/chol_decomp.ipynb
@@ -58,29 +58,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "It can be shown that, given a symmetric positive definite matrix $\\mathbf{A}$, the matrix $\\mathbf{G}$ can be calculated as follows:"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "collapsed": false
-   },
-   "source": [
-    "    for j = 1:N\n",
-    "\n",
-    "        G[j,j] = A[j,j] - dot(G[j,:j-1],G[j,:j-1])    \n",
-    "\n",
-    "        G[j,j] = sqrt(G[j,j])\n",
-    "\n",
-    "        G[j+1:,j] = (A[j+1:,j] - dot(G[j+1:,:j-1], G[j,:j-1]))/G[j,j]"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "The following two images present a \"proof\" of this algorithm for the particular case in which $N = 4$."
+    "The following two images illustrate the Cholesky's decomposition algorithm for the particular case in which $N = 4$."
    ]
   },
   {
@@ -95,6 +73,26 @@
    "metadata": {},
    "source": [
     "<img src='chol_decomp/Cholesky_decomposition_2.jpg' width = 600>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "It can be shown that, given a symmetric positive definite matrix $\\mathbf{A}$, the matrix $\\mathbf{G}$ can be calculated as follows:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "    for j = 1:N\n",
+    "\n",
+    "        G[j,j] = A[j,j] - dot(G[j,:j-1],G[j,:j-1])    \n",
+    "\n",
+    "        G[j,j] = sqrt(G[j,j])\n",
+    "\n",
+    "        G[j+1:,j] = (A[j+1:,j] - dot(G[j+1:,:j-1], G[j,:j-1]))/G[j,j]"
    ]
   },
   {
@@ -199,9 +197,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "N = 5\n",
@@ -214,9 +210,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -244,7 +238,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [default]",
+   "display_name": "Python 2",
    "language": "python",
    "name": "python2"
   },
@@ -258,9 +252,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.10"
+   "version": "2.7.13"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 0
+ "nbformat_minor": 1
 }
