--- a/Content/ldlt_decomp.ipynb
+++ b/Content/ldlt_decomp.ipynb
@@ -233,34 +233,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "It can be shown that, given a symmetric matrix $\\mathbf{A}$, the matrices $\\mathbf{L}$ and $\\mathbf{D}$ can be calculated as follows:"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "    for j = 1:N\n",
-    "\n",
-    "        v = L[j,:j-1]*d[:j-1]\n",
-    "\n",
-    "        d[j] = A[j,j] - np.dot(L[j,:j-1], v[:j-1])\n",
-    "\n",
-    "        L[j+1:,j] = (A[j+1:,j] - np.dot(L[j+1:,:j-1],v[:j-1]))/d[j]"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "where `v` is an auxiliary variable and `d` is an 1D array containing the diagonal elements of $\\mathbf{D}$."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "The two images below present a \"proof\" of this algorithm for the particular case in which $N = 4$."
+    "The two images below illustrate the LDL<sup>T</sup> algorithm for the particular case in which $N = 4$."
    ]
   },
   {
@@ -275,6 +248,33 @@
    "metadata": {},
    "source": [
     "<img src='ldlt_decomp/LDLt_decomposition_2.jpg' width = 600>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "It can be shown that, given a symmetric matrix $\\mathbf{A}$, the matrices $\\mathbf{L}$ and $\\mathbf{D}$ can be calculated as follows:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "    for j = 1:N\n",
+    "\n",
+    "        v = L[j,:j-1]*d[:j-1]\n",
+    "\n",
+    "        d[j] = A[j,j] - dot(L[j,:j-1], v[:j-1])\n",
+    "\n",
+    "        L[j+1:,j] = (A[j+1:,j] - dot(L[j+1:,:j-1],v[:j-1]))/d[j]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "where `v` is an auxiliary variable and `d` is an 1D array containing the diagonal elements of $\\mathbf{D}$."
    ]
   },
   {
@@ -369,7 +369,9 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "N = 5\n",
