--- a/Content/lu_decomp_pivoting.ipynb
+++ b/Content/lu_decomp_pivoting.ipynb
@@ -435,7 +435,7 @@
     "        # zeroing of the elements in the ith column\n",
     "        C[i+1:,i+1:] = C[i+1:,i+1:] - outer(C[i+1:,i], C[i,i+1:])\n",
     "        \n",
-    "    return P, np.tril(C, k=-1), np.triu(C)"
+    "    return P, C"
    ]
   },
   {
@@ -521,24 +521,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Exercise 17"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "1. Implement the LU decomposition with partial pivoting presented above. The code must receive a matrix `A` and calculate the matrices `P`, `L` and `U`.\n",
+    "### Exercise\n",
     "\n",
-    "2. Use the calculated matrices `P`, `L` and `U` for solving a linear system `Ax = y`. The code must use the functions you have created for solving lower and upper triangular systems.\n",
+    "1. In your `my_functions.py` file, implement the LU decomposition with partial pivonting presented above. The code must receive a matrix `A` and return the matrices `C` and `P`.\n",
     "\n",
-    "3. Use the `numpy.allclose` to compare:\n",
+    "2. In your `my_functions.py` file, use the matrices `C` and `P` to solve a linear system `Ax = y`. The code must use the function you have created in the item 1, as well as the functions you have created for solving triangular systems.\n",
     "\n",
-    "    a. The product `PA` to the product `LU`;\n",
-    "    \n",
-    "    b. The matrices `P`, `L` and `U` obtained by your code to the matrices `P`, `L` and `U` obtained by the routine [`scipy.linalg.lu`](http://docs.scipy.org/doc/scipy-0.14.0/reference/generated/scipy.linalg.lu.html). Be careful! The matrix `P` calculated by the routine `scipy.linalg.lu` is equal to the transpose of the matrix `P` calculated by the algorithm presented here;\n",
-    "    \n",
-    "    c. The solution of the linear system obtained by your LU code to the solution obtained by `numpy.solve(A,y)`."
+    "3. In your `test_my_functions.py` file, create a test that defines a square matrix `A`, compute the matrices `C` and `P` by using the function implemented in the item 1, use `C` to create the triangular matrices `L` and `U` and verify the condition `PA = LU` is satisfied.\n",
+    "\n",
+    "4. In your `test_my_functions.py` file, create a test to compare the solution of the linear system  obtained by the function implemented in item 2 and the solution obtained by [`numpy.linalg.solve`](https://docs.scipy.org/doc/numpy/reference/generated/numpy.linalg.solve.html).\n",
+    "\n",
+    "5. In your `test_my_functions.py` file, create a test to compare the matrices `P`, `L`, `U` obtainted by using your function with the matrices `P`, `L`, `U` obtainted by using the function [`scipy.linalg.lu`](http://docs.scipy.org/doc/scipy-0.14.0/reference/generated/scipy.linalg.lu.html). Be careful! The matrix `P` calculated by the routine `scipy.linalg.lu` is equal to the transpose of the matrix `P` calculated by the algorithm presented here."
    ]
   },
   {
