--- a/Content/ldlt_decomp.ipynb
+++ b/Content/ldlt_decomp.ipynb
@@ -120,27 +120,27 @@
      "output_type": "stream",
      "text": [
       "B = \n",
-      "[[ 0.76232337  0.773993    0.04934886  0.97607779  0.06170274]\n",
-      " [ 0.          0.24348637  0.49218532  0.0057127   0.67401715]\n",
-      " [ 0.          0.          0.11145379  0.69038759  0.35207957]\n",
-      " [ 0.          0.          0.          0.12305399  0.80226336]\n",
-      " [ 0.          0.          0.          0.          0.64298304]]\n",
+      "[[ 0.99757241  0.04286511  0.98990561  0.95022591  0.46026   ]\n",
+      " [ 0.          0.74911992  0.06705569  0.2417393   0.69253886]\n",
+      " [ 0.          0.          0.32453677  0.99141715  0.31870066]\n",
+      " [ 0.          0.          0.          0.65654067  0.1887834 ]\n",
+      " [ 0.          0.          0.          0.          0.82577037]]\n",
       "\n",
       "\n",
       "B^-1 = \n",
-      "[[   1.31177927   -4.16987611   17.83355231 -110.26575224  132.06097998]\n",
-      " [   0.            4.10700616  -18.13673759  101.56449743 -121.09820518]\n",
-      " [   0.            0.            8.97232831  -50.33875141   57.89571375]\n",
-      " [   0.            0.            0.            8.12651439  -10.13962155]\n",
-      " [   0.            0.            0.            0.            1.55525096]]\n",
+      "[[ 1.0024335  -0.05735987 -3.04578192  3.16959538 -0.05973863]\n",
+      " [ 0.          1.33489976 -0.2758166  -0.07501199 -0.9959258 ]\n",
+      " [ 0.          0.          3.08131491 -4.65297671 -0.12547355]\n",
+      " [ 0.          0.          0.          1.52313489 -0.34821131]\n",
+      " [ 0.          0.          0.          0.          1.21099041]]\n",
       "\n",
       "\n",
       "BC = \n",
-      "[[ 0.0034238   1.29782368  1.25710973  1.38242975  0.7138184 ]\n",
-      " [ 0.          0.22145888  0.64254935  0.42891649  0.45724576]\n",
-      " [ 0.          0.          0.1037343   0.37293063  0.22156328]\n",
-      " [ 0.          0.          0.          0.05514951  0.13936707]\n",
-      " [ 0.          0.          0.          0.          0.09737577]]\n"
+      "[[ 0.23320059  0.69716426  1.16162772  1.86325092  1.19381733]\n",
+      " [ 0.          0.49958741  0.08478676  0.52071042  1.24783153]\n",
+      " [ 0.          0.          0.14745531  0.47420225  0.56253829]\n",
+      " [ 0.          0.          0.          0.11368551  0.287866  ]\n",
+      " [ 0.          0.          0.          0.          0.54279823]]\n"
      ]
     }
    ],
@@ -343,63 +343,44 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Exercise 18"
+    "## Computing inverses by using the LDL<sup>T</sup> decomposition\n",
+    "\n",
+    "As we have learned in a previous class, each column of the inverse of a matrix can be computed by solving a linear system. It means that computing the inverse of an $N \\times N$ matrix requires the solution of $N$ linear systems. Note that, by using the Gaussian elimination (with or without partial pivoting), we need to compute and solve one equivalent triangular system for each one of the $N$ columns of the inverse matrix. If the matrix is symmetric, we may use the LDL<sup>T</sup> decomposition to compute its inverse. In this case, we need to compute the matrices $\\mathbf{L}$ and $\\mathbf{D}$ just once and use them to solve the $N$ required linear systems, each one for a different column of the inverse."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "1. Implement the algorithm presented above for calculating the matrices `L` and `D` from a symmetric matrix `A`. The function must receive a symmetric matrix `A` and return a lower triangular matrix `L` and an 1D array `d` with the diagonal elements of the matrix `D`.\n",
-    "\n",
-    "2. Solve a linear system by using the calculated `L` and `d`. Use the functions implemented previously for solving triangular and diagonal systems.\n",
-    "\n",
-    "3. Test if `A` = `LDL`<sup>T</sup>\n",
-    "\n",
-    "4. Compare your solution of the linear system woth the solution obtained by using the routine [`numpy.linalg.solve`](http://docs.scipy.org/doc/numpy/reference/generated/numpy.linalg.solve.html)"
+    "As we have learned in a previous class, each column of the inverse of a matrix can be computed by solving a linear system. It means that computing the inverse of an $N \\times N$ matrix requires the solution of $N$ linear systems. Note that, by using the Gaussian elimination (with or without partial pivoting), we need to compute and solve one equivalent triangular system for each one of the $N$ columns of the inverse matrix. If the matrix is symmetric, we may use the LDL<sup>T</sup> decomposition to compute its inverse. In this case, we need to compute the matrices $\\mathbf{L}$ and $\\mathbf{D}$ just once and use them to solve the $N$ required linear systems, each one for a different collumn of the inverse."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "How to create a symmetric matrix?"
+    "### Exercise"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "N = 5\n",
-    "\n",
-    "A = np.reshape(np.random.rand(N*N), (N,N))\n",
-    "\n",
-    "A = np.dot(A.T, A)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[ 2.37236061  2.1176592   2.26495545  1.16510657  1.0490748 ]\n",
-      " [ 2.1176592   2.56340889  2.10077217  0.99854764  1.29929365]\n",
-      " [ 2.26495545  2.10077217  2.95203926  1.49470026  1.27651369]\n",
-      " [ 1.16510657  0.99854764  1.49470026  0.77740187  0.56441059]\n",
-      " [ 1.0490748   1.29929365  1.27651369  0.56441059  0.91402017]]\n"
-     ]
-    }
-   ],
    "source": [
-    "print A"
+    "In your `my_functions.py` file:\n",
+    "\n",
+    "1) Implement the algorithm presented above for calculating the matrices `L` and `D` from a symmetric matrix `A`. The function must receive a symmetric matrix `A` and return a lower triangular matrix `L` and an 1D array `d` with the diagonal elements of the matrix `D`.\n",
+    "\n",
+    "2) Create a function to solve a linear system by using the calculated `L` and `d`. Use the functions you have implemented previously for solving triangular and diagonal systems.\n",
+    "\n",
+    "3) Create a function to compute the inverse of a matrix. The code must receive a matrix `A` and calculate its inverse `Ainv`, column by column, by using the LDL<sup>T</sup> decomposition.\n",
+    "\n",
+    "In your `test_my_functions.py` file:\n",
+    "\n",
+    "4) Use the function implemented in item 1 to verify if $\\mathbf{A} = \\mathbf{L}\\mathbf{D}\\mathbf{L}^{\\top}$.\n",
+    "\n",
+    "5) Compare the solution obtained by using the function implemented in 2 with the solution obtained by using the routine [`numpy.linalg.solve`](http://docs.scipy.org/doc/numpy/reference/generated/numpy.linalg.solve.html)\n",
+    "\n",
+    "6) Use the function implemented in item 3 to compute the inverse matrix and verify if $\\mathbf{A} \\mathbf{A}^{-1} = \\mathbf{I}$."
    ]
   }
  ],
