--- a/Content/chol_decomp.ipynb
+++ b/Content/chol_decomp.ipynb
@@ -36,7 +36,7 @@
    "source": [
     "$$\n",
     "\\mathbf{x}^{\\top} \\mathbf{A} \\mathbf{x} \\gt 0 \\: , \n",
-    "\\quad \\text{for all nonzero} \\: \\mathbf{x} \\in \\mathbb{R}^{N \\times N} \\: .\n",
+    "\\quad \\text{for all nonzero} \\: \\mathbf{x} \\in \\mathbb{R}^{N} \\: .\n",
     "$$"
    ]
   },
@@ -93,6 +93,22 @@
     "        G[j,j] = sqrt(G[j,j])\n",
     "\n",
     "        G[j+1:,j] = (A[j+1:,j] - dot(G[j+1:,:j-1], G[j,:j-1]))/G[j,j]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Note that this algorithm can be used to verify if a given symmetric matrix is positive definite. If a given matrix is not positive definite, there will be a negative argument in the square root presented above."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Computing inverses by using the Cholesky decomposition\n",
+    "\n",
+    "As we have learned in a previous class, each column of the inverse of a matrix can be computed by solving a linear system. It means that computing the inverse of an $N \\times N$ matrix requires the solution of $N$ linear systems. Note that, by using the Gaussian elimination (with or without partial pivoting), we need to compute and solve one equivalent triangular system for each one of the $N$ columns of the inverse matrix. If the matrix is symmetric, we may use the Cholesky decomposition to compute its inverse. In this case, we need to compute the matrix $\\mathbf{G}$ just once and use it to solve the $N$ required linear systems, each one for a different column of the inverse."
    ]
   },
   {
@@ -160,79 +176,28 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Exercise 19"
+    "### Exercise"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "1. Implement the algorithm presented above for calculating the matrix `G` from a symmetric positive definite matrix `A`. The function must receive a symmetric positive definite matrix `A` and return the lower triangular matrix `G`.\n",
+    "In your `my_functions.py` file:\n",
     "\n",
-    "2. Solve a linear system by using the calculated `G`. Use the functions implemented previously for solving triangular systems.\n",
+    "1) Implement the algorithm presented above for calculating the matrix `G` from a symmetric and positive definite matrix `A`. The function must receive a symmetric matrix `A` and return the matrix `G`.\n",
     "\n",
-    "3. Test if `A` = `GG`<sup>T</sup>\n",
+    "2) Create a function to solve a linear system by using the calculated `G`. Use the functions you have implemented previously for solving triangular and diagonal systems.\n",
     "\n",
-    "4. Compare your solution of the linear system with the solution obtained by using the routine [`numpy.linalg.solve`](http://docs.scipy.org/doc/numpy/reference/generated/numpy.linalg.solve.html)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "How to create a symmetric matrix?"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "import numpy as np"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "N = 5\n",
+    "3) Create a function to compute the inverse of a matrix. The code must receive a matrix `A` and calculate its inverse `Ainv`, column by column, by using the Cholesky decomposition.\n",
     "\n",
-    "A = np.reshape(np.random.rand(N*N), (N,N))\n",
+    "In your `test_my_functions.py` file:\n",
     "\n",
-    "A = np.dot(A.T, A)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[ 1.78680217  1.20091478  1.56831244  1.04615701  1.53371694]\n",
-      " [ 1.20091478  0.99696385  1.34769708  0.83271709  1.23109583]\n",
-      " [ 1.56831244  1.34769708  1.97846671  1.10315765  1.80366976]\n",
-      " [ 1.04615701  0.83271709  1.10315765  1.34197254  1.30109305]\n",
-      " [ 1.53371694  1.23109583  1.80366976  1.30109305  2.02298205]]\n"
-     ]
-    }
-   ],
-   "source": [
-    "print A"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Remember that a matrix can be symmetric but not necessarily positive definite. In this case, the Cholesky decomposition fails and "
+    "4) Use the function implemented in item 1 to verify if $\\mathbf{A} = \\mathbf{G}\\mathbf{G}^{\\top}$.\n",
+    "\n",
+    "5) Compare the solution obtained by using the function implemented in 2 with the solution obtained by using the routine [`numpy.linalg.solve`](http://docs.scipy.org/doc/numpy/reference/generated/numpy.linalg.solve.html)\n",
+    "\n",
+    "6) Use the function implemented in item 3 to compute the inverse matrix and verify if $\\mathbf{A} \\mathbf{A}^{-1} = \\mathbf{I}$."
    ]
   }
  ],
