--- a/Content/lu_decomp_pivoting.ipynb
+++ b/Content/lu_decomp_pivoting.ipynb
@@ -521,17 +521,35 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Computing inverses by using the LU decomposition"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "As we have learned in a previous class, each column of the inverse of a matrix can be computed by solving a linear system. It means that computing the inverse of an $N \\times N$ matrix requires the solution of $N$ linear systems. Note that, by using the Gaussian elimination (with or without partial pivoting), we need to compute and solve one equivalent triangular system for each one of the $N$ columns of the inverse matrix. If we instead use the LU decomposition (with or without partial pivoting), we need to compute the matrices $\\mathbf{L}$ and $\\mathbf{U}$ just once and use them to solve the $N$ required linear systems."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Exercise\n",
     "\n",
-    "1. In your `my_functions.py` file, implement the LU decomposition with partial pivonting presented above. The code must receive a matrix `A` and return the matrices `C` and `P`.\n",
+    "In your `my_functions.py` file:\n",
     "\n",
-    "2. In your `my_functions.py` file, use the matrices `C` and `P` to solve a linear system `Ax = y`. The code must use the function you have created in the item 1, as well as the functions you have created for solving triangular systems.\n",
+    "1) Implement the LU decomposition with partial pivoting presented above. The code must receive a matrix `A` and return the matrices `C` and `P`.\n",
     "\n",
-    "3. In your `test_my_functions.py` file, create a test that defines a square matrix `A`, compute the matrices `C` and `P` by using the function implemented in the item 1, use `C` to create the triangular matrices `L` and `U` and verify the condition `PA = LU` is satisfied.\n",
+    "2) Use the matrices `C` and `P` to solve a linear system `Ax = y`. The code must use the function you have created in the item 1, as well as the functions you have created for solving triangular systems.\n",
     "\n",
-    "4. In your `test_my_functions.py` file, create a test to compare the solution of the linear system  obtained by the function implemented in item 2 and the solution obtained by [`numpy.linalg.solve`](https://docs.scipy.org/doc/numpy/reference/generated/numpy.linalg.solve.html).\n",
+    "3) Create a test that defines a square matrix `A`, compute the matrices `C` and `P` by using the function implemented in the item 1, use `C` to create the triangular matrices `L` and `U` and verify the condition `PA = LU` is satisfied.\n",
     "\n",
-    "5. In your `test_my_functions.py` file, create a test to compare the matrices `P`, `L`, `U` obtainted by using your function with the matrices `P`, `L`, `U` obtainted by using the function [`scipy.linalg.lu`](http://docs.scipy.org/doc/scipy-0.14.0/reference/generated/scipy.linalg.lu.html). Be careful! The matrix `P` calculated by the routine `scipy.linalg.lu` is equal to the transpose of the matrix `P` calculated by the algorithm presented here."
+    "In your `test_my_functions.py` file:\n",
+    "\n",
+    "4) Create a test to compare the solution of the linear system  obtained by the function implemented in item 2 and the solution obtained by [`numpy.linalg.solve`](https://docs.scipy.org/doc/numpy/reference/generated/numpy.linalg.solve.html).\n",
+    "\n",
+    "5) Create a test to compare the matrices `P`, `L`, `U` obtainted by using your function with the matrices `P`, `L`, `U` obtainted by using the function [`scipy.linalg.lu`](http://docs.scipy.org/doc/scipy-0.14.0/reference/generated/scipy.linalg.lu.html). Be careful! The matrix `P` calculated by the routine `scipy.linalg.lu` is equal to the transpose of the matrix `P` calculated by the algorithm presented here."
    ]
   },
   {
