include the estimation of uncertainty

--- a/Content/least_squares.ipynb
+++ b/Content/least_squares.ipynb
@@ -385,7 +385,27 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Exercise 20"
+    "## Estimating the uncertainty of the parameters"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let's consider two $N \\times 1$ vectors $\\mathbf{t}$ and $\\mathbf{v}$, whose elements $t_{i}$ and $v_{i}$, $i = 1, \\dots, N$, respectively, are random variables. Let's also consider that these vectors are related as follows:\n",
+    "\n",
+    "$$\n",
+    "\\mathbf{t} = \\mathbf{H} \\mathbf{v} + \\mathbf{c} \\: ,\n",
+    "$$\n",
+    "\n",
+    "where $\\mathbf{H}$ and $\\mathbf{c}$ are, respectively, an $N \\times N$ matrix and an $n \\times 1$ vector formed by non-random elements."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Exercise"
    ]
   },
   {
@@ -464,9 +484,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "%matplotlib inline\n",
@@ -477,9 +495,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# number of data\n",
@@ -515,9 +531,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -561,9 +575,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.11"
+   "version": "2.7.13"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 0
+ "nbformat_minor": 1
 }
