--- a/Content/chol_decomp.ipynb
+++ b/Content/chol_decomp.ipynb
@@ -58,28 +58,98 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The following two images illustrate the Cholesky's decomposition algorithm for the particular case in which $N = 4$."
+    "The following cells illustrate the Cholesky's decomposition algorithm for the particular case in which $N = 4$."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src='chol_decomp/Cholesky_decomposition_1.jpg' width = 600>"
+    "$$\n",
+    "\\begin{bmatrix}\n",
+    "a_{11} & a_{21} & a_{31} & a_{41} \\\\\n",
+    "a_{21} & a_{22} & a_{32} & a_{42} \\\\\n",
+    "a_{31} & a_{32} & a_{33} & a_{43} \\\\\n",
+    "a_{41} & a_{42} & a_{43} & a_{44}\n",
+    "\\end{bmatrix} =\n",
+    "\\begin{bmatrix}\n",
+    "g_{11} &  &  &  \\\\\n",
+    "g_{21} & g_{22} & & \\\\\n",
+    "g_{31} & g_{32} & g_{33} & \\\\\n",
+    "g_{41} & g_{42} & g_{43} & g_{44}\n",
+    "\\end{bmatrix}\n",
+    "\\begin{bmatrix}\n",
+    "g_{11} & g_{21} & g_{31} & g_{41} \\\\\n",
+    " & g_{22} & g_{32} & g_{42} \\\\\n",
+    " & & g_{33} & g_{43} \\\\\n",
+    " & & & g_{44}\n",
+    "\\end{bmatrix}\n",
+    "$$"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src='chol_decomp/Cholesky_decomposition_2.jpg' width = 600>"
+    "Column 1 $\\left( \\, j = 1 \\, \\right)$\n",
+    "\n",
+    "$$\n",
+    "\\begin{split}\n",
+    "a_{11} &= g_{11} g_{11} &\\longrightarrow \\: &g_{11} = \\sqrt{a_{11}} \\\\\\\\\n",
+    "a_{21} &= g_{11} g_{21} &\\longrightarrow \\: &g_{21} = \\frac{a_{21}}{g_{11}} \\\\\\\\\n",
+    "a_{31} &= g_{11} g_{31} &\\longrightarrow \\: &g_{31} = \\frac{a_{31}}{g_{11}} \\\\\\\\\n",
+    "a_{41} &= g_{11} g_{41} &\\longrightarrow \\: &g_{41} = \\frac{a_{41}}{g_{11}}\n",
+    "\\end{split}\n",
+    "$$"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "It can be shown that, given a symmetric positive definite matrix $\\mathbf{A}$, the matrix $\\mathbf{G}$ can be calculated as follows:"
+    "Column 2 $\\left( \\, j = 2 \\, \\right)$\n",
+    "\n",
+    "$$\n",
+    "\\begin{split}\n",
+    "a_{22} &= g_{21} g_{21} + g_{22} g_{22} &\\longrightarrow \\: &g_{22} = \\sqrt{a_{22} - g_{21} g_{21}} \\\\\\\\\n",
+    "a_{32} &= g_{21} g_{31} + g_{22} g_{32} &\\longrightarrow \\: &g_{32} = \\frac{a_{32} - g_{21} g_{31}}{g_{22}} \\\\\\\\\n",
+    "a_{42} &= g_{21} g_{41} + g_{22} g_{42} &\\longrightarrow \\: &g_{42} = \\frac{a_{42} - g_{21} g_{41}}{g_{22}} \\\\\\\\\n",
+    "\\end{split}\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Column 3 $\\left( \\, j = 3 \\, \\right)$\n",
+    "\n",
+    "$$\n",
+    "\\begin{split}\n",
+    "a_{33} &= g_{31} g_{31} + g_{32} g_{32} + g_{33} g_{33} &\\longrightarrow \\: &g_{33} = \\sqrt{a_{33} - g_{31} g_{31} - g_{32} g_{32}} \\\\\\\\\n",
+    "a_{43} &= g_{31} g_{41} + g_{32} g_{42} + g_{33} g_{43} &\\longrightarrow \\: &g_{43} = \\frac{a_{43} - g_{31} g_{41} - g_{32} g_{42}}{g_{33}} \\\\\\\\\n",
+    "\\end{split}\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Column 4 $\\left( \\, j = 4 \\, \\right)$\n",
+    "\n",
+    "$$\n",
+    "\\begin{split}\n",
+    "a_{44} &= g_{41} g_{41} + g_{42} g_{42} + g_{43} g_{43} + g_{44} g_{44} &\\longrightarrow \\: &g_{44} = \\sqrt{a_{44} - g_{41} g_{41} - g_{42} g_{42} - g_{43} g_{43}}\n",
+    "\\end{split}\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The example given above can be easily generalized for the case any $N \\times N$ matrix $\\mathbf{A}$ which is symmetric and positive definite. Based on the example given above, the matrix $\\mathbf{G}$ can be calculated as follows:"
    ]
   },
   {
