covariance propagation law

--- a/Content/chol_decomp.ipynb
+++ b/Content/chol_decomp.ipynb
@@ -149,7 +149,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The example given above can be easily generalized for the case any $N \\times N$ matrix $\\mathbf{A}$ which is symmetric and positive definite. Based on the example given above, the matrix $\\mathbf{G}$ can be calculated as follows:"
+    "The example given above can be easily generalized for any symmetric and positive definite $N \\times N$ matrix $\\mathbf{A}$. Based on the example given above, the matrix $\\mathbf{G}$ can be calculated as follows:"
    ]
   },
   {
