--- a/Content/least_squares.ipynb
+++ b/Content/least_squares.ipynb
@@ -145,16 +145,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Notice that, to determine the vector $\\mathbf{x}$ from $\\mathbf{d}$ and $\\mathbf{A}$, it is needed to solve a non-square linear system."
+    "The vector $\\mathbf{x}$ is usually called **parameter vector**. Notice that, to determine the parameter vector $\\mathbf{x}$ from $\\mathbf{d}$ and $\\mathbf{A}$, it is needed to solve a non-square linear system."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now, consider the problem of determining the vector $\\mathbf{x}$ from the measurements $\\mathbf{d}$ and the $N \\times M$ matrix $\\mathbf{A}$. Mathematically, this problem consists in determining a vector $\\mathbf{x} = \\mathbf{x}^{\\ast}$ producing a $\\mathbf{y}$ *\"as close as possible\"* to $\\mathbf{d}$. To solve this problem, we need to define what *\"as close as possible\"* means. The notion of \"*closeness*\" is intrinsically related to the notion of \"*distance*\" and, consequently, to the notion of <a href=\"https://en.wikipedia.org/wiki/Norm_(mathematics)\">norm</a>.\n",
+    "Now, consider the problem of determining $\\mathbf{x}$ from the observed data $\\mathbf{d}$ and the $N \\times M$ matrix $\\mathbf{A}$. Mathematically, this problem consists in determining a vector $\\mathbf{x} = \\mathbf{x}^{\\ast}$ producing a $\\mathbf{y}$ *\"as close as possible\"* to $\\mathbf{d}$. To solve this problem, we need to define what *\"as close as possible\"* means. The notion of \"*closeness*\" is intrinsically related to the notion of \"*distance*\" and, consequently, to the notion of <a href=\"https://en.wikipedia.org/wiki/Norm_(mathematics)\">norm</a>.\n",
     "\n",
-    "For example, let's consider a vector $\\mathbf{r} = \\mathbf{d} - \\mathbf{y}$, which is defined as the difference between the observed data $\\mathbf{d}$ and the predicted data $\\mathbf{y}$. The length of this vector can be determined by the following scalar function:"
+    "For example, let's consider a vector $\\mathbf{r} = \\mathbf{d} - \\mathbf{y}$, which is defined as the difference between the observed data $\\mathbf{d}$ and the predicted data $\\mathbf{y}$. The vector $\\mathbf{r}$ is usually called **residuals vector**. The length of the residuals vector can be determined by the following scalar function:"
    ]
   },
   {
@@ -175,7 +175,7 @@
    "source": [
     "where $r_{i} = d_{i} - y_{i}$, $i = 1, \\dots, N$. This function is a norm that quantifies the \"*distance*\" between the vectors $\\mathbf{d}$ and $\\mathbf{y}$. It is called **<a href=\"https://en.wikipedia.org/wiki/Norm_(mathematics)#Euclidean_norm\">Euclidean norm</a>** (or **Euclidean distance**). Notice that this function equals to zero if $\\mathbf{d} = \\mathbf{y}$ and it is greater than zero if $\\mathbf{d} \\ne \\mathbf{y}$.\n",
     "\n",
-    "So, the problem of determining a vector $\\mathbf{x} = \\mathbf{x}^{\\ast}$ producing a $\\mathbf{y}$ *\"as close as possible\"* to $\\mathbf{d}$ can be thought of the problem of determining a vector $\\mathbf{x} = \\mathbf{x}^{\\ast}$ producing the minimum Euclidean norm of the difference between the observed data $\\mathbf{d}$ and the predicted data $\\mathbf{y}$."
+    "So, the problem of determining a vector $\\mathbf{x} = \\mathbf{x}^{\\ast}$ producing a $\\mathbf{y}$ *\"as close as possible\"* to $\\mathbf{d}$ can be thought of the problem of determining a parameter vector $\\mathbf{x} = \\mathbf{x}^{\\ast}$ producing the minimum Euclidean norm of the difference between the observed data $\\mathbf{d}$ and the predicted data $\\mathbf{y}$."
    ]
   },
   {
@@ -224,7 +224,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "By considering that there is only one vector $\\mathbf{x}^{\\ast}$ producing the minimum $\\Phi(\\mathbf{x})$, we can state that"
+    "This function is usually called **misfit function**."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "By considering that there is only one particular parameter vector $\\mathbf{x}^{\\ast}$ minimizing the misfit function $\\Phi(\\mathbf{x})$, we can state that"
    ]
   },
   {
@@ -244,7 +251,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Besides that, it can be proven that the vector $\\mathbf{x}^{\\ast}$ satisfies the following equation:"
+    "We may use the misfit function to estimate the particular parameter vector $\\mathbf{x}^{\\ast}$. To do it, we may simply compute the misfit function produced by a set of given parameter vectors and choose the particular parameter vector producing the minimum misfit function value."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Alternatively, we may estimate the parameter vector $\\mathbf{x}^{\\ast}$ by exploring the derivatives of the misfit function with respect to the components $x_{j}$, $j = 1, \\dots, M$, of the parameter vector. We know that, if the misfit function assumes a minimum value at $\\mathbf{x}^{\\ast}$, then its gradient evaluated at $\\mathbf{x}^{\\ast}$ equals to the null vector. It means that"
    ]
   },
   {
@@ -392,13 +406,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let's consider two $N \\times 1$ vectors $\\mathbf{t}$ and $\\mathbf{v}$, whose elements $t_{i}$ and $v_{i}$, $i = 1, \\dots, N$, respectively, are random variables. Let's also consider that these vectors are related as follows:\n",
+    "Let's consider two $N \\times 1$ vectors $\\mathbf{t}$ and $\\mathbf{v}$, whose elements $t_{i}$ and $v_{i}$, $i = 1, \\dots, N$, respectively, are [random variables](https://en.wikipedia.org/wiki/Random_variable). Let's also consider that these vectors are related as follows:\n",
     "\n",
     "$$\n",
     "\\mathbf{t} = \\mathbf{H} \\mathbf{v} + \\mathbf{c} \\: ,\n",
     "$$\n",
     "\n",
-    "where $\\mathbf{H}$ and $\\mathbf{c}$ are, respectively, an $N \\times N$ matrix and an $n \\times 1$ vector formed by non-random elements."
+    "where $\\mathbf{H}$ and $\\mathbf{c}$ are, respectively, an $N \\times N$ matrix and an $N \\times 1$ vector formed by constant (non-random) elements. In this case, the [covariance matrix](https://en.wikipedia.org/wiki/Covariance_matrix) of $\\mathbf{t}$ (denoted by $\\mathbf{\\Sigma}\\left( \\mathbf{t}\\right)$) can be computed by using the covariance matrix of $\\mathbf{v}$ (denoted by $\\mathbf{\\Sigma}\\left( \\mathbf{v}\\right)$) as follows:\n",
+    "\n",
+    "$$\n",
+    "\\mathbf{\\Sigma}\\left( \\mathbf{t}\\right) = \\mathbf{H} \\, \\mathbf{\\Sigma}\\left( \\mathbf{v}\\right) \\mathbf{H}^{\\top} \\: .\n",
+    "$$"
    ]
   },
   {
@@ -484,7 +502,9 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "%matplotlib inline\n",
@@ -495,7 +515,9 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# number of data\n",
